Some Spacing Issues

--- a/StreamWork/wwwroot/css/site.css
+++ b/StreamWork/wwwroot/css/site.css
@@ -397,3 +397,12 @@ lds-dual-ring {
     }
 }
 
+.indexCaption {
+  font-size: 11px;
+}
+@media screen and (min-width: 1200px) {
+    .indexCaption {
+        font-size: 14px;
+    }
+}
+
